--- a/css/base.css
+++ b/css/base.css
@@ -108,7 +108,6 @@ img {
 section {
   float: left;
   width: 100%;
-  min-height: 100vh;
   position: relative;
 }
 .Container {
@@ -176,8 +175,6 @@ h2 {
 }
 
 /* header */
-#header_wrap {
-}
 header {
   position: absolute;
   background: rgba(0, 0, 0, 0);
@@ -217,10 +214,6 @@ header.fixed {
   animation: dropHeader 0.3s;
   padding: 20px;
 }
-header.fixed a#logo {
-  width: 130px;
-  height: 37px;
-}
 @keyframes dropHeader {
   0% {
     top: -5rem;
@@ -229,23 +222,36 @@ header.fixed a#logo {
     top: 0;
   }
 }
+header.fixed a#logo {
+  width: 130px;
+  height: 37px;
+}
 header.on a#logo img {
   top: -37px;
 }
 
-header #header_btn {
-  float: right;
+header .header-right-btn {
+  display: flex;
+  justify-content: row;
+  align-items: center;
+  column-gap: 10px;
 }
-header #header_btn a {
-  position: relative;
-  /* background: var(--secondary-color); */
-  background: rgba(19, 201, 145, 0.8);
-  padding: 5px 5px;
-  border-radius: 8px;
-  transition: all 0.3s;
+header #btn-album svg {
+  fill: var(--white);
+  width: 36px;
 }
-header #header_btn a:hover {
-  background: var(--primary-color);
+header #btn-album a:hover svg {
+  fill: var(--primary-color);
+}
+header.fixed #btn-album svg {
+  width: 28px;
+}
+header.on #btn-album svg {
+  fill: var(--black);
+  opacity: 0.9;
+}
+header.on #btn-album a:hover svg {
+  fill: var(--secondary-color);
 }
 
 /* sidebar 외부링크 */
@@ -351,15 +357,11 @@ aside.on a:hover svg {
     top: -30px;
   }
 
-  header #header_btn {
-    margin-right: 10px;
+  header #btn-album svg {
+    width: 30px;
   }
-  header #header_btn a {
-    padding: 4px 4px;
-    background: var(--secondary-color);
-  }
-  header #header_btn a:hover {
-    background: var(--secondary-color);
+  header.fixed #btn-album svg {
+    width: 28px;
   }
 
   .navbarTogglerWrap {
@@ -414,83 +416,6 @@ aside.on a:hover svg {
     bottom: 50% !important;
     transform: translateY(50%) rotate(-45deg);
   }
-
-  /* header .gnb {
-    display: none;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    padding: 56px 15px;
-    z-index: 101;
-    background: rgba(0, 0, 0, 0.9);
-    transition: all 0.4s;
-    overflow: auto;
-  }
-  #lang {
-    float: right;
-    margin-bottom: 15px;
-    padding: 16px;
-  }
-  #lang ul li {
-    padding: 16px;
-  }
-  header .gnb > ol {
-    float: right;
-    clear: both;
-  }
-  header .gnb > ol li {
-    margin-bottom: 10px;
-  }
-
-  header input[id="hamburger-menu"]:checked + label + .gnb {
-    display: block;
-  }
-  header input[id="hamburger-menu"] + label {
-    float: right;
-    display: block;
-    width: 26px;
-    height: 20px;
-    margin: 3px 0;
-    margin-left: 15px;
-    z-index: 110;
-    position: relative;
-    cursor: pointer;
-  }
-  header input[id="hamburger-menu"] + label span {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    border-radius: 30px;
-    background: var(--purple-color);
-    transition: all 0.35s;
-  }
-  header input[id="hamburger-menu"]:checked + label span {
-    background: var(--white);
-  }
-  header input[id="hamburger-menu"] + label span:nth-child(1) {
-    top: 0;
-  }
-  header input[id="hamburger-menu"] + label span:nth-child(2) {
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  header input[id="hamburger-menu"] + label span:nth-child(3) {
-    bottom: 0;
-  }
-  header input[id="hamburger-menu"]:checked + label span:nth-child(1) {
-    top: 50%;
-    transform: translateY(-50%) rotate(45deg);
-  }
-  header input[id="hamburger-menu"]:checked + label span:nth-child(2) {
-    opacity: 0;
-  }
-  header input[id="hamburger-menu"]:checked + label span:nth-child(3) {
-    bottom: 50%;
-    transform: translateY(50%) rotate(-45deg);
-  } */
 
   aside {
     bottom: 40px;
