-. update : minting guide

--- a/guide/mintingguide.css
+++ b/guide/mintingguide.css
@@ -40,3 +40,12 @@ li {
 .mint-img {
   width: 300px;
 }
+
+/* 모바일 */
+@media screen and (max-width: 900px) {
+  .content-div {
+
+    width: 100%;
+  }
+
+}
