--- a/css/mintingInfo.css
+++ b/css/mintingInfo.css
@@ -457,6 +457,7 @@ section .imgarea > div{
 }
 
 .go_mint_guide{
+  visibility: hidden;
   margin-top: 20px;
   text-decoration: underline;
   color: var(--secondary-active-color);
