--- a/css/index.css
+++ b/css/index.css
@@ -139,7 +139,19 @@ nav ol li a {
   padding-top: 8rem;
 }
 
+.modal{ 
+  position:absolute; width:100%; height:100%; z-index:100; background: rgba(0,0,0,0.8); top:0; left:0; display:none;
+}
 
+.modal_content{
+  width:500px; height:300px;
+  background:#fff; border-radius:10px;
+  position:relative; top:50%; left:50%;
+  margin-top:-100px; margin-left:-200px;
+  text-align:center;
+  box-sizing:border-box; padding:74px 0;
+  line-height:23px; 
+}  
 
 /* home */
 #Home {
