--- a/css/index.css
+++ b/css/index.css
@@ -139,7 +139,7 @@ nav ol li a {
   padding-top: 8rem;
 }
 
-.modal{
+.modal{ 
   position:absolute; width:100%; height:100%; z-index:100; background: rgba(0,0,0,0.8); top:0; left:0; display:none;
 }
 
@@ -150,8 +150,8 @@ nav ol li a {
   margin-top:-100px; margin-left:-200px;
   text-align:center;
   box-sizing:border-box; padding:74px 0;
-  line-height:23px;
-}
+  line-height:23px; 
+}  
 
 /* home */
 #Home {
@@ -347,20 +347,12 @@ nav ol li a {
 .section6 .textarea h2 {
   text-align: center;
 }
-.section6 .imgarea{
-  row-gap:64px;
-}
 .section6 .imgarea > div {
   grid-column: 4 / 10;
 }
 .section6 .imgarea .expansion-banner {
   font-size: 0;
   margin-bottom: 10px;
-}
-
-.section6 h3 {
-  text-align: center;
-  margin-bottom: 24px;
 }
 
 .Expansion-img {
@@ -373,15 +365,18 @@ nav ol li a {
   position: relative;
   font-size: 0;
 }
-.thesandbox-img > div img {
+.Expansion-img > div img {
   width: 15%;
   position: absolute;
   left: 16px;
   top: 16px;
   border: 2px solid #e6e6e8;
 }
-.thesandbox-img video {
+.Expansion-img video {
   width: 100%;
+}
+
+.Expansion-img-2 > div {
 }
 .thesandbox-img-2 > div {
   width: 100%;
@@ -414,9 +409,6 @@ nav ol li a {
   --poster-color: #eee;
 }
 
-
-
-
 /* Roadmap */
 .section7 {
   background-image: url(https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/bg-bk.jpg);
@@ -430,8 +422,6 @@ nav ol li a {
   text-align: center;
   opacity: 0.6;
 }
-
-
 
 /* Team */
 .section10 .textarea,
